@startuml
hide circle
skinparam classAttributeIconSize 0
class CommandSearchFlashcard {
  - String arguments
  + executeCommand()
}

class DeckManager {
  + static Deck currentDeck
  + static Map<String, Deck> decks
  + static globalSearch(String): String
}

class Deck {
  + List<Flashcard> flashcards
  + searchFlashcardQuestion(String): List<Flashcard>
}

class Flashcard {
  + String question
  + String answer
}

CommandSearchFlashcard --> DeckManager
DeckManager --> Deck
Deck --> Flashcard
@enduml